move industry comment to modal

--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -91,19 +91,19 @@
                                         <span class="step-date">
                                             <div class="first_phase">{{ timeScheduling.firstPhase }}</div>
                                         </span>
-                                    <span class="step-name">فاز اول</span>
+                                    <span class="step-name">جمع آوری داده</span>
                                 </div>
                                 <div class="step-container {% is_active project_pk=project_pk phase=2 %}">
                                         <span class="step-date">
                                             <div class="second_phase">{{ timeScheduling.secondPhase }}</div>
                                         </span>
-                                    <span class="step-name">فاز دوم</span>
+                                    <span class="step-name">تحلیل داده ها</span>
                                 </div>
                                 <div class="step-container {% is_active project_pk=project_pk phase=3 %}">
                                         <span class="step-date">
                                             <div class="third_phase">{{ timeScheduling.thirdPhase }}</div>
                                         </span>
-                                    <span class="step-name">فاز سوم</span>
+                                    <span class="step-name">سابمیت مقاله</span>
                                 </div>
                                 <div class="step-container {% is_active project_pk=project_pk phase=4 %}">
                                         <span class="step-date">
