--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -225,6 +225,13 @@
                         </div>
                     </div>
                 </div>
+                {% if project_pk %}
+                    <div class="row add-comment">
+                        <div class="col-lg-12 text-right">
+                            {% include 'industry/layouts/comment.html' with project_pk=project_pk %}
+                        </div>
+                    </div>
+                {% endif %}
                 {#                <div class="card-side has-image">#}
                 {#                    <div class="user-personal-info">#}
                 {#                        <div class="expert-profile">#}
