add beta version icon to dashboards

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -61,8 +61,8 @@
 </div>
 <div class="main">
     <div class="top-bar">
-        <img src="{% static 'expert/img/logoName.png' %}" alt="chamranTeam" id="maxLogo">
-        <img src="{% static 'img/logo.png' %}" alt="chamranTeam" id="minLogo">
+        <img src="{% static 'img/logo_text_beta.png' %}" alt="chamranTeam" id="maxLogo">
+        <img src="{% static 'img/logo_beta.png' %}" alt="chamranTeam" id="minLogo">
         <div class="dropdown">
             <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
                 {% if request.user.expertuser.expertform.photo %}
