--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -76,7 +76,10 @@
                     </div>
                     <div class="row" style="direction: ltr!important">
                         <div class="col-lg-4 col-xs-3">
-                            <div class="project-progress mbottom-lg-25">
+                            {% if not project.is_date_valid %}
+                                <div class="project-progress-no-access">این قسمت در دسترس نیست!</div>
+                            {% endif %}
+                            <div class="project-progress mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
                                 <div class="step-container active">
                                             <span class="step-date">
                                                 <div class="start">
@@ -115,6 +118,7 @@
                                     <div class="arrow"></div>
                                 </div>
                             </div>
+                            <hr class="vertical-line">
                         </div>
                         <div class="col-lg-8 col-xs-9">
                             <div class="row mbottom-lg-25 d-none d-lg-block ">
@@ -155,14 +159,16 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row">
-                                                    <div class="col-lg-12">
-                                                        <div class="pre-header">
-                                                            <span>توضیحات اجرایی</span>
+                                                {% if executive_info %}
+                                                    <div class="row">
+                                                        <div class="col-lg-12">
+                                                            <div class="pre-header">
+                                                                <span>توضیحات اجرایی</span>
+                                                            </div>
+                                                            <pre id="executive-info">{{ executive_info }}</pre>
                                                         </div>
-                                                        <pre id="executive-info">{{ executive_info }}</pre>
                                                     </div>
-                                                </div>
+                                                {% endif %}
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="industry-logo-preview text-left">
