--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -77,7 +77,10 @@
                     </div>
                     <div class="row" style="direction: ltr!important">
                         <div class="col-lg-4 col-xs-3">
-                            <div class="project-progress mbottom-lg-25">
+                            {% if not project.is_date_valid %}
+                                <div class="project-progress-no-access">این قسمت در دسترس نیست!</div>
+                            {% endif %}
+                            <div class="project-progress mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
                                 <div class="step-container active">
                                     <span class="step-date">
                                         <div class="start">
@@ -116,6 +119,7 @@
                                     <div class="arrow"></div>
                                 </div>
                             </div>
+                            <hr class="vertical-line">
                         </div>
                         <div class="col-lg-8 col-xs-9">
                             <div class="row mbottom-lg-25 d-none d-lg-block ">
