--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5561,7 +5561,7 @@ hr.vertical-line:after {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateZ(-45deg);
+    transform: translate(-50%, -50%);
     background-color: #f7fdf8;
     color: #3ccd1c;
     font-weight: 500;
