--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -343,9 +343,7 @@
                 </span>
                 از لحاظ نکات اخلاقی (کار با نمونه انسانی، حیوانی، مواد رادیواکتیو و...)، پروژه شما با چه چالش هایی روبه رو است؟
                 </div>
-                <div class='answer'>
-                ${policy}
-                </div>
+                <div class='answer'>${policy}</div>
                 </div>`;
             $(".project-info-content").html(role);
             $('*').persiaNumber();
@@ -362,9 +360,7 @@
                 </span>
                 جهت انجام پروژه خود به چه امکانات یا آزمایشگاه هایی احتیاج دارید؟
                 </div>
-                <div class='answer'>
-                ${required_lab_equipment}
-                </div>
+                <div class='answer'>${required_lab_equipment}</div>
                 </div>
                 <div>
                 <div class='question'>
@@ -373,9 +369,7 @@
                 </span>
                 جهت انجام پروژه خود به چه تخصص ها و چه تکنیک ها آزمایشگاهی ای احتیاج دارید؟
                 </div>
-                <div class='answer'>
-                ${required_method}
-                </div>
+                <div class='answer'>${required_method}</div>
                 </div>
                 <div>
                 <div class='question'>
@@ -384,9 +378,7 @@
                 </span>
                 لطفا مراحل انجام پروژه خود را مشخص کنید.
                 </div>
-                <div class='answer'>
-                ${project_phase}
-                </div>
+                <div class='answer'>${project_phase}</div>
                 </div>
                 <div>
                 <div class='question'>
@@ -395,9 +387,7 @@
                 </span>
                 پروژه شما به چه مقدار بودجه نیاز دارد؟
                 </div>
-                <div class='answer'>
-                ${required_budget} ریال
-                </div>
+                <div class='answer'>${required_budget} ریال</div>
                 </div>`;
             $(".project-info-content").html(resources);
             $('*').persiaNumber();
@@ -412,9 +402,7 @@
                 </span>
                 لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.
                 </div>
-                <div class='answer'>
-                ${approach_ans}
-                </div>
+                <div class='answer'>${approach_ans}</div>
                 </div>
                 <div>
                 <div class='question'>
@@ -423,9 +411,7 @@
                 </span>
                 این راه حل چه مشکلاتی می‌تواند داشته باشد؟
                 </div>
-                <div class='answer'>
-                ${potential_problems}
-                </div></div>`;
+                <div class='answer'>${potential_problems}</div></div>`;
             $(".project-info-content").html(approach);
             $('*').persiaNumber();
         });
@@ -439,9 +425,7 @@
                 </span>
                 لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
                 </div>
-                <div class='answer'>
-                ${main_problem_and_importance}
-                </div></div>
+                <div class='answer'>${main_problem_and_importance}</div></div>
                 <div>
                 <div class='question'>
                 <span class='question-mark'>
@@ -449,9 +433,7 @@
                 </span>
                 در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟
                 </div>
-                <div class='answer'>
-                ${progress_profitability}
-                </div></div>`;
+                <div class='answer'>${progress_profitability}</div></div>`;
             $(".project-info-content").html(majors);
             $('*').persiaNumber();
         });
