--- a/industry/templates/industry/layouts/researcher_request.html
+++ b/industry/templates/industry/layouts/researcher_request.html
@@ -34,7 +34,7 @@
 {#                                            <span class="input-group-text"> - </span>#}
 {#                                        </div>#}
                                         <label for="id_researcher_count">حداکثر تعداد:</label>
-                                        {{ requestResearcherForm.researcher_count }}
+                                        {{ researcherRequestFrom.researcher_count }}
 {#                                        <div class="input-group-append">#}
 {#                                            <span class="input-group-text">+</span>#}
 {#                                        </div>#}
@@ -46,7 +46,7 @@
 {#                                            <span class="input-group-text"> - </span>#}
 {#                                        </div>#}
                                         <label for="id_least_hour"> ساعت کار(ساعت):</label>
-                                        {{ requestResearcherForm.least_hour }}
+                                        {{ researcherRequestFrom.least_hour }}
 {#                                        <div class="input-group-append">#}
 {#                                            <span class="input-group-text">+</span>#}
 {#                                        </div>#}
